--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <ul>
         <li><a href="https://drive.google.com/file/d/1MVyyhzq4dA9EISB6whF3eYkC2bmlmmip/view?usp=sharing">Video: Dino Joke Chat</a></li>
         <li><a href="./scratch_demos/story_generator_demo.html">Demo: Short Story Generator</a></li>
+        <li><a href="./scratch_demos/recipe_generator.html">Demo: Recipe Generator</a></li>
       </ul>
     </nav>
 
