Prevent <Enter> from putting in return character?

--- a/playgrounds/image_playground_2405.html
+++ b/playgrounds/image_playground_2405.html
@@ -163,6 +163,7 @@
 
         function logKey(e) {
             if (e.code == 'Enter') {
+                e.preventDefault();
                 generateImage()
             }
         }
