--- a/playgrounds/text_playground_2405.html
+++ b/playgrounds/text_playground_2405.html
@@ -213,6 +213,7 @@
         //this function binds the <Enter> key to the 'generate' function
         function logKey(e) {
             if (e.code == 'Enter') {
+                e.preventDefault();
                 generateCompletion()
             }
         }
