--- a/index.html
+++ b/index.html
@@ -20,11 +20,25 @@
     <h1>Beth's Project Page !!</h1>
   </div>
 
+  <div class="section-style">
+
+
+    <h2>Demos & Samples</h2>
+    <p>These are the demos/samples that are mentioned in the Curriculum Doc</p>
+    <nav>
+      <ul>
+   <li><a href="./playgrounds/image_playground_2405.html">Prompt Practice: Images Playground</a></li>
+        <li><a href="./playgrounds/text_playground_2405.html">Prompt Practice: Text Playground</a></li>
+                <li><a href="./scratch_demos/story_generator.html">Demo: Short Story Generator</a></li>
+        <li><a href="./scratch_demos/recipe_generator.html">Demo: Recipe Generator</a></li>
+      </ul>
+    </nav>
+      </div>
 
   <div class="section-style">
 
     <h2>Navigate</h2>
-    <h3>View test pages and active extensions</h3>
+    <h3>View all test pages and active extensions</h3>
 
     <p>Old Extensions</p>
     <nav>
