--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <h2>Demos & Samples</h2>
-    <p>These are the demos/samples that are mentioned in the Curriculum Doc</p>
+    <h3>These are the resources and sample files that are mentioned in the Curriculum Doc.</h3>
     <nav>
       <ul>
    <li><a href="./playgrounds/image_playground_2405.html">Prompt Practice: Images Playground</a></li>
