--- a/playgrounds/text_playground_1206.html
+++ b/playgrounds/text_playground_1206.html
@@ -41,8 +41,7 @@
     <div class="window">
         <div class="sidebar section-style">
             <label for="apiKey">Text API Key</label>
-            <input type="password" id="apiKey" placeholder="sk_qwertyasdfgh"
-                value="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" />
+            <input type="password" id="apiKey" placeholder="sk_qwertyasdfgh" />
             <label for="model">Model name</label>
             <!-- https://huggingface.co/api/partners/fal-ai/models -->
             <!-- https://huggingface.co/api/models?inference_provider=fal-ai&pipeline_tag=text-to-image -->
