--- a/playgrounds/text_playground_1206.html
+++ b/playgrounds/text_playground_1206.html
@@ -199,7 +199,7 @@
 
 
         document.addEventListener("DOMContentLoaded", () => {
-            const dropdown = document.getElementById("models");
+            const dropdown = document.getElementById("model");
 
             // Fetch your JSON file (e.g., models.json)
             fetch('openrouter_models.json') // <-- replace with your actual file path
