--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="./playgrounds/text_playground_2405.html">Prompt Practice: Text Playground</a></li>
                 <li><a href="./scratch_demos/story_generator.html">Demo: Short Story Generator</a></li>
         <li><a href="./scratch_demos/recipe_generator.html">Demo: Recipe Generator</a></li>
+        <li><a href="https://drive.google.com/drive/folders/1VwFka2VMDrOWmYUimt083qzZSPtY0uum?usp=sharing">Google drive with test files</a></li>
       </ul>
     </nav>
       </div>
